--- a/pl_1.yaml
+++ b/pl_1.yaml
@@ -4,7 +4,7 @@
   gather_facts: false
   tasks:
     - name: Create BaseOS Repository
-      ansible.builtin.yum_repository:
+      yum_repository:
         name: "baseos"
         description: "Baseos Description"
         baseurl: http://ec2-54-162-204-86.compute-1.amazonaws.com/BaseOs/
@@ -14,7 +14,7 @@
 
 
     - name: Create Appstream Repository
-      ansible.builtin.yum_repository:
+      yum_repository:
         name: "appstream"
         description: "App Description"
         baseurl: http://ec2-54-162-204-86.compute-1.amazonaws.com/AppStream/
