--- a/pl_5.yaml
+++ b/pl_5.yaml
@@ -1,7 +1,14 @@
 ---
 - name: hwreport
-  hosts: all
+  hosts: controller
   tasks:
+
+
+    - name: Remove hwreport.txt if already exists
+      file:
+        path: /root/hwreport.txt
+        state: absent
+
     - name: Download the file
       uri:
         url: "http://ec2-54-162-204-86.compute-1.amazonaws.com/hwreport.txt"
