--- a/pl_11.yaml
+++ b/pl_11.yaml
@@ -38,7 +38,7 @@
      
       always:
 
-        - name: Formate Filesystem
+        - name: Format Filesystem
           filesystem:
             fstype: ext4
             dev: /dev/sdb1
