--- a/zee-balancer/meta/main.yml
+++ b/zee-balancer/meta/main.yml
@@ -2,7 +2,7 @@ galaxy_info:
   author: zeeshan
   description: setup load balancer
   company: your company (optional)
-
+  role_name: zee-balancer
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
   # issue_tracker_url: http://example.com/issue/tracker
